# spec-sandbox

./: .gitignore  README.md  app.py  demo-canonical-spec.md  demo.db-shm  demo.py  pyproject.toml  run.sh  spec_sandbox.db-shm  spec_sandbox.db-wal  verify.py
.streamlit/: config.toml
examples/outputs/: sample-comparison-report.md
examples/scenarios/: enterprise-sso-scenarios.yaml  feature-flag-scenarios.yaml
examples/specs/: city-incident-intake.md  enterprise-sso.md  feature-flag-dashboard.md
src/spec_sandbox/: orchestrator.py
src/spec_sandbox/agents/: __init__.py  prompts.py  runner.py
src/spec_sandbox/branching/: __init__.py  engine.py
src/spec_sandbox/cli/: main.py
src/spec_sandbox/comparison/: __init__.py  engine.py
src/spec_sandbox/domain/: __init__.py  models.py
src/spec_sandbox/merge/: __init__.py  finalizer.py  planner.py
src/spec_sandbox/orchestration/: __init__.py  orchestrator.py
src/spec_sandbox/projection/: __init__.py  builder.py
src/spec_sandbox/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py
src/spec_sandbox/storage/: __init__.py  database.py
tests/: test_branching.py  test_database.py  test_mock_provider.py  test_pipeline.py
