[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-sandbox"
version = "0.1.0"
description = "AI-powered spec branching and scenario comparison system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "python-multipart>=0.0.9",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "jinja2>=3.1.4",
    "python-frontmatter>=1.1.0",
    "deepdiff>=7.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[project.scripts]
spec-sandbox = "spec_sandbox.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
